--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": " ESLINT_NO_DEV_ERRORS=true react-scripts  start ",
+    "start": "react-scripts  start  ESLINT_NO_DEV_ERRORS=true ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.jsx",
     "lint:fix": "eslint src/**/*.jsx --fix",
-    "format": "prettier --write src/**/*.jsx",
+    "format": "prettier --write src/**",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
