--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.3",
+    "cookielib": "^1.1.3",
     "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
